cli/tests/snapshots/pdf_module__structure-cluster.snap
---
source: cli/tests/pdf_module.rs
expression: structure(&r.pdf)
---
info Title: cluster
info Keywords: aruna-pdf-template 1
info Creator: Aruna {version}
page 1: 595.28 × 841.89 pt, 54 glyphs, fonts GVFISO+NotoSerif-Regular, RNABOI+NotoSerif-Bold
