cli/tests/snapshots/pdf_module__structure-label.snap
---
source: cli/tests/pdf_module.rs
expression: structure(&r.pdf)
---
info Title: label
info Keywords: aruna-pdf-template 1
info Creator: Aruna {version}
page 1: 595.28 × 841.89 pt, 50 glyphs, fonts (Type3 of the labels), FLDKKC+NotoSansCuneiform-Regular, PCPBMD+NotoSerif-Bold, ZKKUII+NotoSerif-Regular
