cli/tests/snapshots/pdf_module__structure-tab.snap
---
source: cli/tests/pdf_module.rs
expression: structure(&r.pdf)
---
info Title: tab
info Keywords: aruna-pdf-template 1
info Creator: Aruna {version}
page 1: 595.28 × 841.89 pt, 46 glyphs, fonts OXQYHZ+NotoSerif-Regular, SWDZGN+NotoSerif-Bold
